add_subdirectory(async)
add_subdirectory(asyncConsole)
add_subdirectory(asyncFreeRtos)
add_subdirectory(asyncImpl)

if (NOT DEFINED OPENBSW_CONFIGURE_GENERIC_BSW)
    set(OPENBSW_CONFIGURE_GENERIC_BSW ON)
endif ()

set(OPENBSW_IS_UNIT_TEST OFF)
if (DEFINED BUILD_EXECUTABLE AND BUILD_EXECUTABLE STREQUAL "unitTest")
    set(OPENBSW_IS_UNIT_TEST ON)
endif ()

if (OPENBSW_IS_UNIT_TEST
    AND DEFINED OPENBSW_PLATFORM
    AND OPENBSW_PLATFORM STREQUAL "s32k1xx")
    set(OPENBSW_CONFIGURE_GENERIC_BSW OFF)
endif ()

if (DEFINED BUILD_TARGET_RTOS AND BUILD_TARGET_RTOS STREQUAL "THREADX")
    add_subdirectory(asyncThreadX)
endif ()
add_subdirectory(bsp)
add_subdirectory(common)
add_subdirectory(cpp2can)
add_subdirectory(estd)
add_subdirectory(io)
add_subdirectory(lifecycle)
add_subdirectory(logger)
add_subdirectory(platform)
add_subdirectory(stdioConsoleInput)
add_subdirectory(timer)
add_subdirectory(util)

if (OPENBSW_CONFIGURE_GENERIC_BSW)
    add_subdirectory(cpp2ethernet)
    add_subdirectory(docan)
    add_subdirectory(doip)
    add_subdirectory(loggerIntegration)
    add_subdirectory(lwipSocket)
    add_subdirectory(middleware)
    add_subdirectory(runtime)
    add_subdirectory(storage)
    add_subdirectory(transport)
    if (NOT OPENBSW_IS_UNIT_TEST)
        add_subdirectory(transportRouterSimple)
    endif ()
    add_subdirectory(uds)
endif ()
